[package]
name = "sano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
tiny_http = "0.12.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
serde = { version= "1.0.193" , features = ["derive"]}
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
